set list position on resize. activate new giftcard toggle. cleanup maps js

--- a/app/assets/javascripts/map/deferred_map.js.coffee.erb
+++ b/app/assets/javascripts/map/deferred_map.js.coffee.erb
@@ -43,6 +43,8 @@ proxiedFunctions = [
   'pinStore'
   'pinStores'
   'forceRedraw'
+  'clearPins'
+  'clearLevelCounts'
 ]
 
 do (proto = map.Micello.prototype, toProxy = proxiedFunctions) ->
