--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -150,7 +150,7 @@
 			<div class="search-toggle-favs hide-fully--non-palm js-disabled-hide">
 
 				<%# Search toggle btn %>
-				<button type="button" class="btn js-global-search-toggle" toggle-visibility="site-search" aria-owns="site-search">
+				<button type="button" class="btn js-search-toggle" toggle-visibility="site-search" aria-owns="site-search">
 					<span class="hide-visually">Show site search</span>
 					<span class="icon icon--search icon--spacing icon--flush-top icon--kilo" aria-hidden="true"></span>
 				</button>
