Remove jquery.cloudinary.js

--- a/app/views/shared/micello_maps/_popup.html.erb
+++ b/app/views/shared/micello_maps/_popup.html.erb
@@ -7,11 +7,7 @@
     <%# Store logo %>
     <%% if(obj.logo) { %>
       <div class="map-micello__overlay__retailer__img">
-        <%%=
-          map.micello.Map.logoOptions.alt = name + ' logo',
-          console.log(logo, map.micello.Map.logoOptions),
-          $.cloudinary.fetch_image(logo, map.micello.Map.logoOptions).attr('onerror', 'map.micello.Map.removeLogo(this)')[0].outerHTML
-        %>
+        <img src="//res.cloudinary.com/wlabs/image/fetch/b_rgb:FFFFFF,c_pad,h_62,w_168/<%%= logo %>" alt="<%%= logo %> logo" />
       </div>
     <%% } %>
     <%# //Store logo %>
