set correct alt tag for store logo

--- a/app/views/shared/micello_maps/_popup.html.erb
+++ b/app/views/shared/micello_maps/_popup.html.erb
@@ -7,7 +7,7 @@
     <%# Store logo %>
     <%% if(obj.logo) { %>
       <div class="map-micello__overlay__retailer__img">
-        <img src="//res.cloudinary.com/wlabs/image/fetch/b_rgb:FFFFFF,c_pad,h_62,w_168/<%%= logo %>" alt="<%%= logo %> logo" />
+        <img src="//res.cloudinary.com/wlabs/image/fetch/b_rgb:FFFFFF,c_pad,h_62,w_168/<%%= logo %>" alt="<%%= name %> logo" />
       </div>
     <%% } %>
     <%# //Store logo %>
