--- a/app/views/shared/tiles/_event.html.erb
+++ b/app/views/shared/tiles/_event.html.erb
@@ -1,4 +1,4 @@
-<%= content_for :microdata, 'itemprop=event itemscope itemtype=http://schema.org/Event' %>
+<%= content_for :tile_attrs, 'itemprop=event itemscope itemtype=http://schema.org/Event' %>
 
 <%# Tile event image %>
 <div class="tile__image">
