--- a/app/assets/stylesheets/partials/modules/_no-content-fallback-msg.scss
+++ b/app/assets/stylesheets/partials/modules/_no-content-fallback-msg.scss
@@ -11,7 +11,6 @@
 */
 
 .no-content-fallback-msg {
-  text-align: center;
   @include to-rem(padding-top, 62);
 
   @include respond-min($non-palm) {
@@ -20,18 +19,17 @@
 
   /* Set common colour */
   &,
-  .icon:before {color: $color-txt-light;}
+  .no-content-fallback-msg__icon:before {color: $color-txt-light;}
 
   em,
   span {display: block;}
 
-  .icon:before {
-    @include font-size(48, 1);
-
-    @include respond-min($non-palm) {
-      @include font-size(60, 1);
-    }
+  .drop-down-container {
+    @include to-rem(margin, $spacing-third auto 0);
+    @include to-rem(max-width, $drop-down-width);
   }
+
+  p {text-align: center;}
 
     /* 'No content/search results' text */
     em {
@@ -41,9 +39,18 @@
       @include to-rem(margin-top, $spacing-half);
     }
 
+
     /* 'See nearby centres' text */
     p > span {color: $color-txt-dark;}
 }
 
 /* Modifier: remove top padding */
 .no-content-fallback-msg--flush {padding-top: 0;}
+
+    .no-content-fallback-msg__icon:before {
+      @include font-size(48, 1);
+
+      @include respond-min($non-palm) {
+        @include font-size(60, 1);
+      }
+    }
