correctly check for national page

--- a/app/views/products/_products.html.erb
+++ b/app/views/products/_products.html.erb
@@ -20,7 +20,7 @@
       <%# //Centre selector trigger %>
 
       <%# Centre selector target %>
-      <% if national %>
+      <% if national? %>
         <div class="drop-down-menu__target drop-down pointer-up box box--drop-down" id="no-products-nearby-centre">
           <dl class="drop-down-menu__list">
             <% %w(NSW ACT QLD VIC SA WA).each do |state| %>
