--- a/app/views/deals/show.html.erb
+++ b/app/views/deals/show.html.erb
@@ -98,7 +98,7 @@
 <% end %>
 <%# //Fine print %>
 
-<%- content_for :javascript do -%>
+<%- content_for :custom_javascript do -%>
   <%# Run 'Toggle content' plugin %>
   <%= javascript_include_tag 'jquery-extensions/jquery.toggle-content' %>
 
