--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -218,7 +218,7 @@
 <%- end -%>
 <%# //Availability %>
 
-<%- content_for :javascript do -%>
+<%- content_for :custom_javascript do -%>
   <%# Run 'Flexslider' plugin %>
   <%= javascript_include_tag 'flexslider/jquery.flexslider' %>
 
