--- a/app/views/shared/micello_maps/_map.html.erb
+++ b/app/views/shared/micello_maps/_map.html.erb
@@ -21,7 +21,7 @@
 </script>
 <%# //Render the map in the canvas %>
 
-<% content_for :javascript do %>
+<% content_for :custom_javascript do %>
   <%= cloudinary_js_config %>
   <% if load_immediately %>
     <%= javascript_tag do %>
