--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -202,6 +202,6 @@
   <%# //Map %>
 
 </div>
-<%- content_for :javascript do -%>
+<%- content_for :custom_javascript do -%>
   <%= javascript_include_tag 'stores_maps' %>
 <%- end -%>
