--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -218,6 +218,6 @@
 
 </div>
 
-<%- content_for :javascript do -%>
+<%- content_for :custom_javascript do -%>
   <%= javascript_include_tag 'stores_maps' %>
 <%- end -%>
