--- a/app/views/styleguide/modules/widgets/_flexslider.html.erb
+++ b/app/views/styleguide/modules/widgets/_flexslider.html.erb
@@ -38,7 +38,7 @@
 
 <% end %>
 
-<%- content_for :javascript do -%>
+<%- content_for :custom_javascript do -%>
   <%= javascript_include_tag 'flexslider/jquery.flexslider' %>
 
   <script>
