--- a/app/views/centre_hours/show.html.erb
+++ b/app/views/centre_hours/show.html.erb
@@ -208,7 +208,7 @@
 %>
 <%# //Footer promo tiles %>
 
-<%- content_for :javascript do -%>
+<%- content_for :custom_javascript do -%>
   <script>
     $(function() {
       // Submit store trading hours request on change
