--- a/app/views/layouts/base.html.erb
+++ b/app/views/layouts/base.html.erb
@@ -68,7 +68,21 @@
   </button>
   <%# //Site feedback button - links to JIRA issue collector %>
 
-  <%= render "/shared/javascripts_global" %>
+  <%# Set up a global JavaScript object %>
+  <%= include_gon(:namespace => :westfield) %>
+  <%# //Set up a global JavaScript object %>
+
+  <%# Global JavaScript %>
+  <%= javascript_include_tag 'application' %>
+  <%# //Global JavaScript %>
+
+  <%# Custom JavaScript %>
+  <%= yield :custom_javascript %>
+  <%# //Custom JavaScript %>
+
+  <%# 3rd party JavaScript (Tealium) %>
+  <%=raw third_party_universal_tagging %>
+  <%# //3rd party JavaScript (Tealium) %>
 
 </body>
 
