--- a/app/views/products/redirection.html.erb
+++ b/app/views/products/redirection.html.erb
@@ -17,7 +17,7 @@
 
 </div>
 
-<%- content_for :javascript do -%>
+<%- content_for :custom_javascript do -%>
   <script>
     $(document).ready(function() {
       $('.js-redirect').on("click", function(e){
