--- a/app/views/styleguide/abstractions/_toggle_content.html.erb
+++ b/app/views/styleguide/abstractions/_toggle_content.html.erb
@@ -3,7 +3,7 @@
     <p>Content that gets toggled</p>
   </div>
 
-  <%- content_for :javascript do -%>
+  <%- content_for :custom_javascript do -%>
     <%# Run 'Toggle content' plugin %>
     <%= javascript_include_tag 'jquery-extensions/jquery.toggle-content' %>
 
