Adding a sub dir for social share partials

--- a/app/views/layouts/_tile.html.erb
+++ b/app/views/layouts/_tile.html.erb
@@ -10,7 +10,7 @@
 
   <%# Tile controls %>
   <div class="tile__controls js-tile-controls">
-    <%= render "/shared/social_share", kind: result.kind, id: result.id %>
+    <%= render "/shared/social_share/social_share", kind: result.kind, id: result.id %>
   </div>
   <%# //Tile controls %>
 
