--- a/app/views/layouts/detail_view.html.erb
+++ b/app/views/layouts/detail_view.html.erb
@@ -12,7 +12,7 @@
   <%# Detail view controls %>
   <% unless meta.hide_social_share %>
     <div class="detail-view__controls detail-view__divider">
-      <%= render "/shared/social_share", kind: meta.kind, id: meta.id %>
+      <%= render "/shared/social_share/social_share", kind: meta.kind, id: meta.id %>
       <% if in_lightbox? %>
         <button type="button" class="btn">
           <span class="icon icon--close-sml icon--flush-top" aria-hidden="true"></span>
