--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -139,7 +139,7 @@
             <form id="giftCardForm" action="<%= request.path %>" method="get" class="stores-maps__filters__item js-map-view-state">
               <input type="hidden" name="map" value="{{viewingMap}}">
               <legend class="hide-visually">Gift card filter</legend>
-              <label for="gift-card-store-filter" class="btn-toggle btn btn--main btn--main-white btn--main-ios-toggle <%= 'is-disabled' if !@stores.any_accepting_gift_cards? %> <%= 'is-active' if filtering_gift_cards? %>">
+              <label for="gift-card-store-filter" class="btn-toggle btn btn--main btn--main-white btn--main-checkbox-toggle btn--main-ios-toggle <%= 'is-disabled' if !@stores.any_accepting_gift_cards? %> <%= 'is-active' if filtering_gift_cards? %>">
                 <input ng-init="gift_cards = <%= filtering_gift_cards? ? true : false %>" ng-model="gift_cards" ng-change="giftCardChange()" id="gift-card-store-filter" type="checkbox" name="gift_cards" value="true" class="hide-visually" <%= 'checked' if filtering_gift_cards? %><%= 'disabled' unless @stores.any_accepting_gift_cards? %>>
                 <span class="btn-toggle__lbl btn--main-ios-toggle__lbl">
                   <span aria-hidden="true" class="icon icon--gift-card icon--xlrg icon--flush-top-mozilla"></span>
@@ -159,7 +159,7 @@
             <%# //Keyword Filter toggle %>
 
             <%# Keyword Filter %>
-            <div id="keyword-filter" class="stores-maps__filters__item stores-maps__filters__item--keyword-filter js-disabled-hide">
+            <div id="keyword-filter" class="stores-maps__filters__item stores-maps__keyword-filter-input js-disabled-hide">
               <label for="keyword-filter-input" class="hide-visually">Filter Stores by Keyword</label>
               <input id="keyword-filter-input" type="search" placeholder="Enter store name" class="txt-input js-stores-keyword-filter">
             </div>
