--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -139,28 +139,29 @@
             <form id="giftCardForm" action="<%= request.path %>" method="get" class="stores-maps__filters__item js-map-view-state">
               <input type="hidden" name="map" value="{{viewingMap}}">
               <legend class="hide-visually">Gift card filter</legend>
-              <label for="gift-card-store-filter" class="btn-toggle btn btn--main btn--main-white btn--main-checkbox-toggle btn--main-ios-toggle <%= 'is-disabled' if !@stores.any_accepting_gift_cards? %> <%= 'is-active' if filtering_gift_cards? %>">
+              <label for="gift-card-store-filter" class="btn btn--main btn--main-white btn--main-checkbox-toggle btn--main-ios-toggle <%= 'is-disabled' if !@stores.any_accepting_gift_cards? %> <%= 'is-active' if filtering_gift_cards? %>">
                 <input ng-init="gift_cards = <%= filtering_gift_cards? ? true : false %>" ng-model="gift_cards" ng-change="giftCardChange()" id="gift-card-store-filter" type="checkbox" name="gift_cards" value="true" class="hide-visually" <%= 'checked' if filtering_gift_cards? %><%= 'disabled' unless @stores.any_accepting_gift_cards? %>>
-                <span class="btn-toggle__lbl btn--main-ios-toggle__lbl">
+                <span class="btn--main-checkbox-toggle__lbl btn--main-ios-toggle__lbl">
                   <span aria-hidden="true" class="icon icon--gift-card icon--xlrg icon--flush-top-mozilla"></span>
                   Gift Card
                   <span class="hide-visually--palm"> accepted</span>
                 </span>
-                <span class="btn-toggle__handle btn--main-ios-toggle__handle"></span>
+                <span class="btn--main-ios-toggle__handle"></span>
               </label>
               <button type="submit" class="js-enabled-hide" <%= 'checked' if filtering_gift_cards? %><%= 'disabled' unless @stores.any_accepting_gift_cards? %>>Go</button>
             </form>
             <%# //Gift card filter %>
 
             <%# Keyword Filter toggle %>
-            <button type="button" class="stores-maps__filters__item stores-maps__keyword-filter-toggle btn btn--main btn--main-white btn--main-compact-icon js-stores-keyword-filter-toggle js-search-toggle" toggle-visibility="keyword-filter" aria-owns="">
+            <button type="button" class="stores-maps__filters__item stores-maps__keyword-filter-toggle btn btn--main btn--main-white btn--main-compact-icon js-stores-keyword-filter-toggle js-search-toggle" toggle-visibility="keyword-filter" aria-owns="keyword-filter">
+              <span class="hide-visually">Show filter stores by keyword</span>
               <span class="icon icon--keyword-filter icon--lrg" aria-hidden="true"></span>
             </button>
             <%# //Keyword Filter toggle %>
 
             <%# Keyword Filter %>
             <div id="keyword-filter" class="stores-maps__filters__item stores-maps__keyword-filter-input js-disabled-hide">
-              <label for="keyword-filter-input" class="hide-visually">Filter Stores by Keyword</label>
+              <label for="keyword-filter-input" class="hide-visually">Filter stores by keyword</label>
               <input id="keyword-filter-input" type="search" placeholder="Enter store name" class="txt-input js-stores-keyword-filter">
             </div>
             <%# Keyword Filter %>
