--- a/app/views/stores/_store.html.erb
+++ b/app/views/stores/_store.html.erb
@@ -1,9 +1,9 @@
-<dd>
+<dd class="js-stores-keyword-filter-store">
   <div class="stores-list__inner container">
 
     <%# Store name %>
     <div class="stores-list__store-name test-store">
-      <strong><%= link_to store.name, (centre_store_url @centre.code, store.retailer_code, store.id), class: 'js-pjax-link-stores' %></strong>
+      <strong><%= link_to store.name, (centre_store_url @centre.code, store.retailer_code, store.id), class: 'js-pjax-link-stores js-stores-keyword-filter-text-to-search' %></strong>
       <%# Phone no %>
       <span class="hide-fully--palm"><span class="hide-visually">Call store: </span><%= phone_format store.phone_number %></span>
       <%# //Phone no %>
