--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -332,9 +332,9 @@
             <%# //Narrow view toggle %>
 
             <%# Wide view toggle %>
-            <label ng-show="triggersVisible" for="sale-items-2" class="filters__trigger filters__trigger--wide btn btn--main btn--main-white btn--main-checkbox-toggle">
-              <input ng-model="on_sale" ng-checked="search.params().on_sale" ng-change="filterSearch('on_sale')" id="sale-items-2" type="checkbox" class="btn--main-checkbox-toggle__input"><!--
-              --><span class="btn--main-checkbox-toggle__lbl">On sale</span>
+            <label ng-show="triggersVisible" for="sale-items-2" class="filters__trigger filters__trigger--wide btn btn--main btn--main-white btn--main-toggle btn--main-toggle-checkbox">
+              <input ng-model="on_sale" ng-checked="search.params().on_sale" ng-change="filterSearch('on_sale')" id="sale-items-2" type="checkbox" class="btn--main-toggle__input"><!--
+              --><span class="btn--main-toggle__lbl">On sale</span>
             </label>
             <%# //Wide view toggle %>
 
