--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -139,14 +139,14 @@
             <form id="giftCardForm" action="<%= request.path %>" data-pjax method="get" class="stores-maps__filters__item js-map-view-state">
               <input type="hidden" name="map" value="{{viewingMap}}">
               <legend class="hide-visually">Gift card filter</legend>
-              <label for="gift-card-store-filter" class="btn btn--main btn--main-white btn--main-checkbox-toggle btn--main-ios-toggle <%= 'is-disabled' if !@stores.any_accepting_gift_cards? %> <%= 'is-active' if filtering_gift_cards? %>">
-                <input ng-init="gift_cards = <%= filtering_gift_cards? ? true : false %>" ng-model="gift_cards" ng-change="giftCardChange()" id="gift-card-store-filter" type="checkbox" name="gift_cards" value="true" class="hide-visually" <%= 'checked' if filtering_gift_cards? %><%= 'disabled' unless @stores.any_accepting_gift_cards? %>>
-                <span class="btn--main-checkbox-toggle__lbl btn--main-ios-toggle__lbl">
+              <label for="gift-card-store-filter" class="btn btn--main btn--main-white btn--main-toggle btn--main-ios-toggle <%= 'is-disabled' if !@stores.any_accepting_gift_cards? %> <%= 'is-active' if filtering_gift_cards? %>">
+                <input ng-init="gift_cards = <%= filtering_gift_cards? ? true : false %>" ng-model="gift_cards" ng-change="giftCardChange()" id="gift-card-store-filter" type="checkbox" name="gift_cards" value="true" class="btn--main-toggle__input hide-visually" <%= 'checked' if filtering_gift_cards? %><%= 'disabled' unless @stores.any_accepting_gift_cards? %>>
+                <span class="btn--main-toggle__lbl">
                   <span aria-hidden="true" class="icon icon--gift-card icon--xlrg icon--flush-top-mozilla"></span>
                   Gift Card
                   <span class="hide-visually--palm"> accepted</span>
                 </span>
-                <span class="btn--main-ios-toggle__handle"></span>
+                <span class="btn--main-toggle-ios__handle"></span>
               </label>
               <button type="submit" class="js-enabled-hide" <%= 'checked' if filtering_gift_cards? %><%= 'disabled' unless @stores.any_accepting_gift_cards? %>>Go</button>
             </form>
@@ -205,6 +205,18 @@
             <%= render stores %>
           <% end %>
         </dl>
+
+        <%# No stores matching keyword filter message %>
+        <div class="no-content-fallback-msg hide-fully js-stores-keyword-filter-no-stores-matching">
+          <span class="icon icon--stores icon--flush-top" aria-hidden="true"></span>
+          <p role="status" aria-live="polite">
+            <em class="h1">No Stores matching
+              <span class="js-stores-keyword-filter-value"></span>
+            </em>
+          </p>
+        </div>
+        <%# //No product search results message %>
+
       </div>
       <%#//Stores list %>
     </div>
