--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -198,6 +198,32 @@
 
 </div>
 
+<%# See More %>
+<% if @product.category_hierarchy.present? %>
+  <section class="detail-view__divider--top-btm detail-view__divider--top island" aria-labelledby="see-more">
+    <h2 class="detail-view__hdr-sub detail-view__mrg-off hn" id="see-more">See More</h2>
+    <nav class="tags tags--pointers" role="navigation">
+      <ul class="horiz-list">
+        <% @product.category_hierarchy.each_with_index do |category, category_count| %>
+          <li>
+            <%= link_to category_canonical_url(category_count), class: "tags__btn btn" do %>
+              <span class="txt-truncate"><%= category.name %></span>
+            <% end %>
+          </li>
+        <% end %>
+        <% if @product.retailer_code.present? %>
+          <li>
+            <%= link_to retailer_canonical_url, class: "tags__btn btn" do %>
+              <span class="txt-truncate"><%= @product.retail_chain_name %></span>
+            <% end %>
+          </li>
+        <% end %>
+      </ul>
+    </nav>
+  </section>
+<% end %>
+<%# //See More %>
+
 <%# Availability %>
 <%- if @product_centres.present? -%>
 <section class="detail-view__divider--top-btm detail-view__divider--top island" aria-labelledby="availability">
